...
  }

  Widget _buildWelcomeText(BuildContext context) {
    return Column(
      children: [
        Text(
          'Welcome to NCL',
          style: Theme.of(context).textTheme.headlineMedium?.copyWith(
            fontWeight: FontWeight.bold,
            color: context.watch<ThemeProvider>().textColor,
          ),
          textAlign: TextAlign.center,
        ),
...
