...
                labelColor: Colors.white,
                unselectedLabelColor: Colors.white.withCustomOpacity(0.7),
                tabs: const [
                  Tab(text: 'Dashboard'),
                  Tab(text: 'Schedule'),
                  Tab(text: 'Scheduler'),
                  Tab(text: 'Timekeeping'),
                  Tab(text: 'Profile'),
                ],
              ),
            ),
          ];
        },
...
